--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,3 +7,7 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+
+# Character
+- skill: Hard Working
+  description: Doesn't stop until the work is done.
